named the app properly

--- a/server/www/index.html
+++ b/server/www/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>vue-heroes</title>
+    <title>vue-cosmosdb</title>
   </head>
   <body>
     <div id="app"></div>
